Fix slide display on mobile

--- a/wp-content/themes/cdn/sass/5_templates/_event.scss
+++ b/wp-content/themes/cdn/sass/5_templates/_event.scss
@@ -6,8 +6,10 @@
 
 .entry-header--event {
   padding-top: 0;
-  margin-bottom: 44px; 
-
+  margin-bottom: 44px;
+  float: left;
+  width: 100%;
+  
   p { margin-top: 22px; }
 }
   
